---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2024-10-14
  Bugfixes:
    - Fixed new surfaces not being considered for milestone checks.
    - Fixed crash when removing a mod that added quality levels.

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2024-09-21
  Changes:
    - Updated for Factorio 2.0.
    - Added a Space Age preset. (May change in the future)
    - Added support for quality. You can select a quality when adding an item as a milestone in the settings GUI. Selecting "normal" will be considered as an "any quality" milestone.

  Locale:
    - Added Catalan translation thanks to badall.
    - Translation updates for French and Dutch.

---------------------------------------------------------------------------------------------------
Version: 1.3.25
Date: 2024-03-03
  Bugfixes:
    - Fixed crash when only 1 milestone was visible while using the mod setting to hide incomplete milestones.

---------------------------------------------------------------------------------------------------
Version: 1.3.24
Date: 2024-02-24
  Bugfixes:
    - Fixed remote presets not loading in a new game, issue introduced with 1.3.23.

---------------------------------------------------------------------------------------------------
Version: 1.3.23
Date: 2024-02-19
  Bugfixes:
    - Fixed Reset button not working properly for remote presets when loading a save file without mod changes.
    - Fixed consumption milestones not being backfilled properly.

---------------------------------------------------------------------------------------------------
Version: 1.3.22
Date: 2024-01-24
  Features: