@@ -92,13 +92,13 @@ message_reloaded_presets_plural=[img=milestones_main_icon_white] [font=default-l
 message_settings_changed=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] settings changed!
 message_settings_changed_multiplayer=[img=milestones_main_icon_white] [font=default-large-bold]Milestones[/font] settings changed by __1__!
 message_settings_backfilled=Completion times for new milestones were backfilled using production statistics.
-message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=default-large-bold]Created the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
-message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
-message_milestone_reached_consumption_first=[img=milestones_main_icon_white] [font=default-large-bold]Consumed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
-message_milestone_reached_consumption_more=[img=milestones_main_icon_white] [font=default-large-bold]Consumed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
-message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=default-large-bold]Killed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
-message_milestone_reached_kill_more=[img=milestones_main_icon_white] [font=default-large-bold]Killed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
-message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green][img=__1__]__2____3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
+message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=default-large-bold]Created the first [color=green]__1__[/color] at [color=green]__2__[img=quantity-time][/color]![/font]
+message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ __2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
+message_milestone_reached_consumption_first=[img=milestones_main_icon_white] [font=default-large-bold]Consumed the first [color=green]__1__[/color] at [color=green]__2__[img=quantity-time][/color]![/font]
+message_milestone_reached_consumption_more=[img=milestones_main_icon_white] [font=default-large-bold]Consumed [color=green]__1__ __2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
+message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=default-large-bold]Killed the first [color=green]__1__[/color] at [color=green]__2__[img=quantity-time][/color]![/font]
+message_milestone_reached_kill_more=[img=milestones_main_icon_white] [font=default-large-bold]Killed [color=green]__1__ __2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
+message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green]__1__[/color] at [color=green]__2__[img=quantity-time][/color]![/font]
 message_settings_permission_denied=[color=red]Cannot change Milestones settings. You need Admin permissions.[/color]
 message_invalid_import_json=[color=red]Invalid import string. This string is not a valid JSON string or encoded string.[/color]
 message_invalid_import_type=[color=red]Invalid import string. Invalid type: [/color]
